feat: add processor module